Style cleanup and allow table/image side-by-side.
Margin and floating fixes so image will be
below table on phone and next table on browser
with some margin padding.

Remove more unused stuff.

--- a/css/index.css
+++ b/css/index.css
@@ -16,84 +16,16 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-* {
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
-}
-
-body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#FFFFFF;
-}
-
-/* Portrait layout (default) */
-.app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
-}
-
-/* Landscape layout (with min-width) */
-@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
-    .app {
-        background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
-    }
-}
 
 h1 {
     font-size:24px;
     font-weight:normal;
-    margin:0px;
+    margin:20px;
     overflow:visible;
     padding:0px;
-    text-align:center;
-}
-
-.event {
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
-}
-
-.event.listening {
-    background-color:#333333;
-    display:block;
-}
-
-.event.received {
-    background-color:#4B946A;
-    display:none;
-}
-
-@keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
-
-@-webkit-keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
-}
-
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
+    text-align:left;
+    background-color: navy;
+    color: white;
 }
 
 html, body {
@@ -104,8 +36,9 @@ html, body {
     text-align: left;
 }
 main {
-    margin-top: 200px;
+    margin-top: 20px;
     margin-left: 20px;
+    margin-right: 20px;
     height: 75%;
     font-family: sans-serif;
     text-align: left;
@@ -133,36 +66,30 @@ header h1 {
     font-weight: bold;
     margin: 8px 0;
 }
-#captureImage {
-    width: 32px;
-    height: 32px;
-    margin: 4px 8px;
-    float: right;
-    border: none;
-    cursor: pointer;
-}
 article {
     margin-top: 44px;
 }
 img {
     padding: 0;
     display: block;
-    margin: 0 auto;
     max-height: 100%;
     max-width: 100%;
 }
 canvas {
     padding: 0;
     display: block;
-    margin: 0 auto;
     max-height: 100%;
     max-width: 100%;
+    float: left;
 }
 table {
     border-collapse: collapse;
     border-spacing: 0;
-    width: 100%;
+    float: left;
+    /* width: 100%; */
     border: 1px solid #ddd;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 
 th, td {
