--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@
 h1 {
     font-size:24px;
     font-weight:normal;
-    margin:20px;
+    margin:10px;
     overflow:visible;
     padding:0px;
     text-align:left;
@@ -36,7 +36,7 @@ html, body {
     text-align: left;
 }
 main {
-    margin-top: 20px;
+    margin-top: 100px;
     margin-left: 20px;
     margin-right: 20px;
     height: 75%;
@@ -48,7 +48,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 25%;
+    height: 80px;
     background-color: navy;
 }
 header img, header h1 {
@@ -62,9 +62,8 @@ header img#logo {
 }
 header h1 {
     color: white;
-    text-align: center;
+    text-align: left;
     font-weight: bold;
-    margin: 8px 0;
 }
 article {
     margin-top: 44px;
