App using env for endpoint. Misc fixes.
Replace hard-coded endpoint w/ env setting.
Move dynamic part to article for easy wiping.
Count by label to demo that we can count.
Color labels and make the text more readable with a background rect.

--- a/css/index.css
+++ b/css/index.css
@@ -65,9 +65,11 @@ header h1 {
     text-align: left;
     font-weight: bold;
 }
+
 article {
-    margin-top: 44px;
+    margin-top: 0;
 }
+
 img {
     padding: 0;
     display: block;
